--- a/index.html
+++ b/index.html
@@ -151,11 +151,11 @@
       <summary>GitHub File</summary>
       <div class="content" style="display:grid; gap:8px">
         <div style="display:grid; gap:8px; grid-template-columns:repeat(auto-fit,minmax(180px,1fr))">
-          <input id="ghOwner" class="input" placeholder="owner (user or org)" />
-          <input id="ghRepo" class="input" placeholder="repo name" />
+          <input id="ghOwner" class="input" placeholder="owner (user or org)" value="Khristory" />
+          <input id="ghRepo" class="input" placeholder="repo name" value="MnM-Quest-Log" />
           <input id="ghBranch" class="input" placeholder="branch (e.g., main)" value="main" />
           <input id="ghPath" class="input" placeholder="path/to/questlog.json" value="mnm-questlog.json" />
-          <input id="ghToken" class="input" placeholder="GitHub token (needed to save)" />
+          <input id="ghToken" class="input" placeholder="GitHub token (needed to save)" value="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" />
         </div>
         <label class="subtle" style="display:flex; align-items:center; gap:8px">
           <input id="ghRemember" type="checkbox" />
