--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
           <input id="ghRepo" class="input" placeholder="repo name" value="MnM-Quest-Log" />
           <input id="ghBranch" class="input" placeholder="branch (e.g., main)" value="main" />
           <input id="ghPath" class="input" placeholder="path/to/questlog.json" value="mnm-questlog.json" />
-          <input id="ghToken" class="input" placeholder="GitHub PAT" value="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" />
+          <input id="ghToken" class="input" placeholder="GitHub PAT" />
         </div>
         <label class="subtle" style="display:flex; align-items:center; gap:8px">
           <input id="ghRemember" type="checkbox" />
